--- a/config.json
+++ b/config.json
@@ -25,7 +25,8 @@
         "duration": 1200,
         "lifetime": 86400,
         "taskUrl": "",
-        "variants": []
+        "variants": [],
+        "production": false
     },
     "advanced": {
         "includeDemographicSurvey": false,
