--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --open",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,10 @@
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "csv-loader": "^3.0.2",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-compat": "^2.7.0",
+    "eslint-plugin-import": "^2.16.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -45,5 +50,8 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7"
-  }
+  },
+  "browserslist": [
+    "since 2011"
+  ]
 }
