--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint src"
+    "lint": "npm run eslint & npm run stylelint",
+    "eslint": "eslint src",
+    "stylelint": "stylelint src"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,6 @@
     "css-loader": "^2.1.0",
     "csv-loader": "^3.0.2",
     "eslint": "^5.13.0",
-    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-compat": "^2.7.0",
     "eslint-plugin-import": "^2.16.0",
     "file-loader": "^3.0.1",
@@ -40,6 +41,10 @@
     "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
+    "stylelint-scss": "^3.5.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
@@ -50,8 +55,5 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7"
-  },
-  "browserslist": [
-    "since 2011"
-  ]
+  }
 }
