--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7"
-  }
+  },
+  "browserslist": [
+    "since 2011"
+  ]
 }
