--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "url-search-params-polyfill": "^5.0.0"
   },
   "browserslist": [
     "since 2011"
