--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -7,6 +7,11 @@
     "sourceType": "module"
   },
   "plugins": ["compat"],
+  "settings": {
+    "polyfills": [
+      "urlsearchparams"
+    ]
+  },
   "extends": [
     "eslint:recommended",
     "plugin:compat/recommended"
